<?xml version="1.0" encoding="utf-8"?>
<!-- 设置密码fragment布局 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="254dp"
    android:layout_height="233dp"
    android:background="@drawable/tip_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="77dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="35dp"
            android:lineSpacingExtra="5dp"
            android:text="@string/dialog_version_message"
            android:textColor="#666666"
            android:textSize="18dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/comment"
            android:layout_width="254dp"
            android:layout_height="49dp"
            android:background="@drawable/selector_version"
              android:enabled="false"
         />

        <Button
            android:id="@+id/buy"
            android:layout_width="254dp"
            android:layout_height="49dp"
            android:background="@drawable/selector_version"
            android:text="@string/buy" 
            android:textSize="18dp"
            />

        <Button
            android:id="@+id/cancel"
            android:layout_width="254dp"
            android:layout_height="49dp"
            android:background="@drawable/selector_version"
            android:text="@string/exist"
             android:textSize="18dp"
             />
    </LinearLayout>

</LinearLayout>