<?xml version="1.0" encoding="utf-8"?>
<!-- 设置密码fragment布局 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e8e8e8"
    android:orientation="vertical" >

    <ImageView android:id="@+id/titleImage"
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:background="@drawable/step1" />

    
    
      <RelativeLayout android:id="@+id/titleLayout"
        android:layout_width="fill_parent"
        android:layout_height="46dp"
        android:background="@drawable/home_head_bg" 
        android:visibility="gone"
        >

        <ImageButton android:id="@+id/back"
            android:layout_width="66dp"
            android:layout_height="28dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/selector_back"
            android:onClick="onClick"
             />
        
        <TextView  
           android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#333333"
            android:textSize="15dp"
           android:text="@string/menu_changepass"/>
        
        
    </RelativeLayout>
    
    
    
    
    
    
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/setting_validate_title"
        android:textColor="#333333"
        android:textSize="13dp" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="210dp"
        android:layout_height="38dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_edittext"
        android:hint="@string/setting_pass_hint"
        android:inputType="textPassword"
        android:paddingBottom="0dp"
        android:paddingTop="0dp"
        android:textColor="#969696"
        android:textSize="13dp" />

    <EditText
        android:id="@+id/repeat"
        android:layout_width="210dp"
        android:layout_height="38dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_edittext"
        android:hint="@string/setting_pass_repeat_hint"
        android:inputType="textPassword"
        android:paddingBottom="0dp"
        android:paddingTop="0dp"
        android:textColor="#969696"
        android:textSize="13dp" />

    <Button
        android:id="@+id/next"
        android:layout_width="102dp"
        android:layout_height="43dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_next"
        android:enabled="false" />

</LinearLayout>