<?xml version="1.0" encoding="utf-8"?>
<!-- 设置邮箱布局 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e8e8e8"
    android:orientation="vertical" >


    <RelativeLayout android:id="@+id/titleLayout"
        android:layout_width="fill_parent"
        android:layout_height="46dp"
        android:background="@drawable/home_head_bg" 
        >

        <ImageButton android:id="@+id/back"
            android:layout_width="66dp"
            android:layout_height="28dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/selector_back"
            android:onClick="onClick"
             />
        
        <TextView  
           android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#333333"
            android:textSize="15dp"
           android:text="@string/home_text_message"/>
        
        
    </RelativeLayout>
    

    <RelativeLayout
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="27dp" >

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:background="@drawable/selector_edittext"
            android:paddingBottom="0dp"
            android:paddingTop="0dp"
            android:singleLine="true"
            android:textColor="#969696"
            android:textSize="13dp" 
            android:inputType="phone"
            android:hint="@string/setting_phone_hint"
            />
    </RelativeLayout>

    <Button
        android:id="@+id/next"
        android:layout_width="102dp"
        android:layout_height="43dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/selector_confirm" />

    <TextView android:id="@+id/desc"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="6dp"
        android:text="@string/setting_phone_desc"
        android:textColor="#888888"
        android:textSize="12dp"
            android:lineSpacingExtra="5dp"
         />
    
     <TextView android:id="@+id/command"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/setting_phone_command"
        android:textColor="#449900"
        android:lineSpacingExtra="6dp"
        android:textSize="12dp" />
    
       <Button
        android:id="@+id/setting"
        android:layout_width="120dp"
        android:layout_height="43dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
         android:background="@drawable/selector_set"
         />
    
    

</LinearLayout>