<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <!-- 标题部分 -->

        <RelativeLayout
            android:id="@+id/headLayout"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="@drawable/home_head_bg" >

            <ImageView
                android:id="@+id/menuLogo"
                android:layout_width="90dp"
                android:layout_height="27dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="12dp"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/license"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:textColor="#242f37"
                android:textSize="18dp" />

            <ImageButton
                android:id="@+id/menuImageButton"
                android:layout_width="62dp"
                android:layout_height="44dp"
                android:layout_alignParentLeft="true"
                android:background="@drawable/selector_menu" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/middleLayout"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@drawable/mid_bg_repeat" >

            <ImageButton
                android:id="@+id/testImageButton"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/selector_test" />

            <LinearLayout
                android:id="@+id/middleTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="20dp"
                android:layout_toRightOf="@id/testImageButton"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/home_alreadyStartGuard"
                    android:textColor="#7cca00"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_alreadyStartGuardDesc"
                    android:textColor="#cbcbcb"
                    android:textSize="10dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/shadowLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@drawable/home_shadow"
                android:orientation="vertical" >
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/autoLayout"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:background="@drawable/selector_homelist"
            android:clickable="true" >

            <ImageView
                android:id="@+id/autoImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:background="@drawable/home_auto" />

            <TextView
                android:id="@+id/textAutoDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/autoImageButton"
                android:text="@string/home_text_auto"
                android:textColor="#242f37"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textAutoDesc"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@id/autoImageButton"
                android:text="@string/home_text_auto_desc"
                android:textColor="#aaaaaa"
                android:textSize="11dp" />

            <ImageView
                android:id="@+id/autoSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/switch_on" />
        </RelativeLayout>

          <RelativeLayout
            android:id="@+id/pocketLayout"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:background="@drawable/selector_homelist"
            android:onClick="onClick" >

            <ImageView
                android:id="@+id/pocketImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:background="@drawable/home_pocket" />

            <TextView
                android:id="@+id/textpocketDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/pocketImageButton"
                android:text="@string/home_text_pocket"
                android:textColor="#242f37"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textpocketDesc"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@id/pocketImageButton"
                android:text="@string/home_text_pocket_desc"
                android:textColor="#aaaaaa"
                android:textSize="11dp" />

            <ImageView
                android:id="@+id/pocketSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/switch_on" />
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/hideLayout"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:background="@drawable/selector_homelist"
            android:clickable="true" >

            <ImageView
                android:id="@+id/hideImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:background="@drawable/home_hide" />

            <TextView
                android:id="@+id/textHideDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/hideImageButton"
                android:text="@string/home_text_hide"
                android:textColor="#242f37"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textHideDesc"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@id/hideImageButton"
                android:text="@string/home_text_hide_desc"
                android:textColor="#aaaaaa"
                android:textSize="11dp" />

            <ImageView
                android:id="@+id/hideSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/switch_off" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/messageLayout"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:background="@drawable/selector_homelist"
            android:onClick="onClick" >

            <ImageView
                android:id="@+id/messageImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:background="@drawable/home_message" />

            <TextView
                android:id="@+id/textMessageDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="11dp"
                android:layout_toRightOf="@id/messageImageButton"
                android:text="@string/home_text_message"
                android:textColor="#242f37"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/textMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textMessageDesc"
                android:layout_toRightOf="@id/messageImageButton"
                android:textColor="#aaaaaa"
                android:textSize="11dp" />

            <ImageView
                android:id="@+id/messagePoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/home_point" />

            <ImageView
                android:id="@+id/messageStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:layout_toLeftOf="@id/messagePoint"
                android:background="@drawable/switch_right" />
        </RelativeLayout>

      
    </LinearLayout>

</LinearLayout>